corrected some faulty logic in the routes; improved layout

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,4 +8,4 @@ block content
       p
         input#suite_id(name="suite_id", placeholder="suite number", type="number")
       p
-        button#btnSubmit(type="submit") Get yer test cases. Many fine test cases!
+        button#btnSubmit(type="submit") Get me some test cases
