removed a background image

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -143,7 +143,7 @@ html {
 
 body {
    background: #fff;
-   background-image: url("http://keralamonorail.org/new/wp-content/uploads/2014/07/monorail-epcot-1-121.jpg");
+   /*background-image: url("http://keralamonorail.org/new/wp-content/uploads/2014/07/monorail-epcot-1-121.jpg");*/
    font-family: 'opensans-regular', sans-serif;
    font-weight: normal;
    font-size: 15px;
