--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,8 @@ block content
   div(style=".center")
     h1= title
 
-    form#testform(name="testform", method="POST", action="submit")
+    form#input(name="input", method="POST", action="submit")
       p
         input#suite_id(name="suite_id", placeholder="suite number", type="number")
       p
-        button#btnSubmit(type="submit") Get me some test cases
+        button#btnSubmit(type="submit") get test cases
